--- a/client/src/Component/About/About.css
+++ b/client/src/Component/About/About.css
@@ -49,8 +49,8 @@
 
 .pic{
     max-width: 300px;
-    height: 35vh;
-    background-color: #ededed;
+    height: 35vh;  
+    background-color: #dddddd;
     border-radius: 5px;
 }
 
