--- a/client/src/Component/Homepage/Homepage.css
+++ b/client/src/Component/Homepage/Homepage.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #f5f5f5
+}
+
 .active{
     background-color: white;
 }
@@ -43,13 +47,25 @@ nav ul li a{
     color: black;
     padding: 0.5rem;
     margin: 0 0.5rem;
-    border-radius: 0.5rem;
     font-size: 15px;
     font-weight: 600;
 }
 
 nav ul li a:hover{
-    color: black;
+    animation: underline 1.8s ease-out;
+    color: rgb(255, 214, 137);
+    transition: all 0.4s ease;
+}
+
+.activate{
+    color: orange;
+    border-bottom: 3px solid orange;
+    animation: unset;
+}
+
+.activate:hover{
+    
+    animation: unset;
 }
 
 nav .menu{
@@ -64,7 +80,7 @@ nav .menu{
 }
 
 nav .menu span{
-    height: 0.4rem;
+    height: 2px;
     width: 100%;
     background-color: black;
     border-radius: 0.2rem;
@@ -107,15 +123,16 @@ small{
     }
 
     nav .title{
-        padding-left: 5px;
+        padding-left: 0;
+        margin-left: 0.8rem;
     }    
 }
 
 @media (max-width:890px){
     nav ul li a{
-        padding: 0.3rem;
+        padding: 0.1rem;
         margin: 0 0.3rem;
-        font-size: 14px;
+        font-size: 13.5px;
     }
 
 
@@ -136,6 +153,7 @@ small{
     }
 
     nav{
+        contain: size;
         flex-direction: column;
         align-items: start;
     }
@@ -155,6 +173,7 @@ small{
         margin: 0.55rem 0.5rem;
     }
     nav ul.Open{
+        animation: wait .5s ease-in;
         display: flex;
         text-align-last: justify;
     }
@@ -168,5 +187,53 @@ small{
     nav ul:active{
         transition: all 0.2s ease-in-out;
     }
+
+    nav .title{
+        padding-left: 20px;
+    }
+
+}
+
+@media (max-width:991px){
+    nav ul li a {
+        font-size: 13px;
+    }
+}
+
+@keyframes underline {
+    0%{
+        transform: translateY(5%);
+    }
+    10%{
+        transform: translateY(10%);
+    }
+    20%{
+        transform: translateY(-15%);
+    }
+
+    /* 40%{
+        transform: translateY(10%);
+    }
+    50%{
+        transform: translateY(10%);
+    }
+    60%{
+        transform: translateY(10%);
+    }
+    */
+}
+
+@keyframes wait {
+    0%{
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    10%{
+        /* transform: translateX(10%); */
+        transition: all 1s ease;
+        opacity: 0;
+    }
+
+
 
 }
