--- a/client/src/Component/Important/Nav/Nav.css
+++ b/client/src/Component/Important/Nav/Nav.css
@@ -105,6 +105,7 @@ a.active {
     border-radius: 10px;
     margin-left: 50px;
     border: 2px solid white;
+    cursor: progress;
 }
 
 
@@ -156,12 +157,12 @@ small{
         display: flex;
         font-size: 1rem;
         transition: all 0.4s ease-in-out;
+        contain: size;
     }
 
     nav{
-        contain: size;
         flex-direction: column;
-        align-items: start;
+        align-items: st0px;
     }
 
     nav ul{
@@ -239,7 +240,11 @@ small{
         transition: all 1s ease;
         opacity: 0;
     }
-
-
-
 }
+
+@media (max-width:1250px) {
+    div{
+        font-size: 16px;
+    }
+}
+
