--- a/client/src/Component/Important/Nav/Nav.css
+++ b/client/src/Component/Important/Nav/Nav.css
@@ -162,7 +162,7 @@ small{
 
     nav{
         flex-direction: column;
-        align-items: st0px;
+        align-items: start;
     }
 
     nav ul{
