line and bar chart added

--- a/client/src/Component/Admin/AdminSidebar/Sidebar.css
+++ b/client/src/Component/Admin/AdminSidebar/Sidebar.css
@@ -147,6 +147,8 @@ body {
     padding: 15px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: 15rem;
+    width: 14rem;
   }
 
   .body-main {
@@ -167,7 +169,7 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 45rem;
-    height: 15rem;
+    height: 30rem;
   }
   
   /* Right Section Styles */
@@ -184,4 +186,11 @@ body {
     background-color: #ecf0f1; /* Adjust as needed */
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: 20rem;
+  }
+  .bottom-right{
+    position: absolute;
+    top: 42rem;
+    height: 40rem;
+    width: 15rem;
   }
