--- a/client/src/Component/BookAppointment/Book.css
+++ b/client/src/Component/BookAppointment/Book.css
@@ -1,30 +1,45 @@
+.general{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .body{
-    height: 60h;
-    width: 100vw;
+    height: 80vh;
+    width: 70vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+
+.head{
+    margin-bottom: 20px;
+}
+
 h2{
     color: #276AB3;
     font-size: 25px;
-    margin-top: 15px;
+    
 }
 
 form{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    column-gap: 20px;
+    display: block;
+    
+    /* flex-wrap: wrap;
+    flex-direction: column; */
+    
+    
+   
 }
 
 .input-field {
     position: relative;
-    width: 250px;
+    width: 35rem;
     height: 44px;
     line-height: 44px;
+    margin-block: 14px;
+    
   }
   label {
     position: absolute;
@@ -74,3 +89,31 @@ textarea::placeholder{
     top: 5px;
 }
 
+
+img{width: 30vw;
+  height: 80vh;
+}
+.photo{
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+
+}
+button{
+  background-color: #276AB3;
+  height:  2.5rem;
+  width: 10rem;
+  text-align: center;
+  line-height: 40px;
+  color: #d3d3d3;
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 20px;
+  border-style: none; 
+  margin-left: 12rem;
+  align-self: center;
+}
+button:hover{
+  box-shadow: 0 0 5px #276AB3,
+  0 0 25px #276AB3, 0 0 50px, 0 0 100px, 0 0 200px;
+}
