--- a/client/src/Component/Admin/AdminSidebar/Sidebar.css
+++ b/client/src/Component/Admin/AdminSidebar/Sidebar.css
@@ -43,6 +43,7 @@ body {
   padding: 10px;
   margin-top: 10px;
   cursor: pointer;
+  display: none;
 }
 
 .Admin-logo {
@@ -183,6 +184,7 @@ h4 {
   padding: 15px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  height: 7rem;
 }
 
 .body-main {
@@ -424,6 +426,10 @@ h4 {
     padding: 10px;
   }
 
+  .toggle-menu-btn {
+    display: inline;
+  }
+
   .logout,
   .setting,
   .logout-opt ul {
@@ -542,7 +548,7 @@ h4 {
   } */
 }
 
-@media screen and (min-width: 375px) and (max-width: 700px) {
+@media screen and (min-width: 320px) and (max-width: 600px) {
   .side-menu-bar {
     width: 50%;
   }
@@ -555,6 +561,9 @@ h4 {
     flex-direction: row;
   }
 
+  .toggle-menu-btn {
+    display: inline;
+  }
 
   .Admin-logo {
     margin-bottom: 3rem;
