--- a/client/src/Component/BookAppointment/Book.css
+++ b/client/src/Component/BookAppointment/Book.css
@@ -46,7 +46,7 @@ form{
     top: 0;
     left: 0;
     width: 100%;
-    color: #d3d3d3;
+    color: #276AB3;
     transition: 0.2s all;
     cursor: text;
   }
@@ -116,4 +116,32 @@ button{
 button:hover{
   box-shadow: 0 0 5px #276AB3,
   0 0 25px #276AB3, 0 0 50px, 0 0 100px, 0 0 200px;
+}
+
+@media only screen and (max-width: 430px) {
+  .general{
+    display: block;
+    margin-top: 61px;
+    margin-bottom: -130px;
+  }
+  .input-field{
+    width: 25rem;
+  }
+  .body{
+    margin-left: 59px;
+  }
+  .input-field{
+    margin-block: 22px;
+    
+  }
+  img {
+    width: 100vw;
+    height: 40vh;
+    margin-bottom: -120px;
+  }
+  button{
+    width: 10rem;
+    margin-left: 7rem;
+  }
+ 
 }
