--- a/client/src/Component/Important/Nav/Nav.css
+++ b/client/src/Component/Important/Nav/Nav.css
@@ -242,9 +242,9 @@ small{
     }
 }
 
-@media (max-width:1250px) {
+/* @media (max-width:1250px) {
     div{
         font-size: 16px;
     }
-}
+} */
 
