--- a/client/src/Component/BookAppointment/Book.css
+++ b/client/src/Component/BookAppointment/Book.css
@@ -118,7 +118,7 @@ button:hover{
   0 0 25px #276AB3, 0 0 50px, 0 0 100px, 0 0 200px;
 }
 
-@media only screen and (max-width: 390px) {
+@media (max-width: 390px) {
   .general{
     display: block;
     margin-top: 61px;
@@ -130,6 +130,7 @@ button:hover{
   }
   .body{
     margin-left: 59px;
+    margin-top: 148px;
   }
 
   img {
@@ -142,4 +143,32 @@ button:hover{
     margin-left: 7rem;
   }
  
+}
+
+@media (max-width: 414px) {
+  .general{
+    display: block;
+    margin-top: 61px;
+    margin-bottom: -250px;
+  }
+  .head{
+    margin-top: -250px;
+  }
+  .input-field{
+    width: 23rem;
+    margin-block: 22px;
+  }
+  .body{
+    margin-left: 59px;
+  }
+
+  img {
+    width: 100vw;
+    height: 40vh;
+    /* margin-bottom: -120px; */
+  }
+  button{
+    width: 10rem;
+    margin-left: 7rem;
+  }
 }
