--- a/client/src/Component/Admin/AdminSidebar/Sidebar.css
+++ b/client/src/Component/Admin/AdminSidebar/Sidebar.css
@@ -43,7 +43,9 @@ body {
   padding: 10px;
   margin-top: 10px;
   cursor: pointer;
-  display: none;
+  width: 50px;
+
+  /* display: none; */
 }
 
 .Admin-logo {
@@ -54,6 +56,9 @@ body {
 .Admin-menu {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .menu-item ul {
@@ -184,7 +189,28 @@ h4 {
   padding: 15px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  height: 7rem;
+  height: 12rem;
+}
+
+.chartt {
+  width: 100%;
+  margin-top: 20px;
+  height: 6rem;
+  background-color: #f2f7f7;
+}
+
+.chart-top {
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.chart-img {
+  width: 20%;
+  height: 3rem;
+  background-color: #b8b5b5;
 }
 
 .body-main {
@@ -192,38 +218,73 @@ h4 {
 }
 
 .main {
-  grid-area: main;
-  display: grid;
-  grid-template-rows: 1fr 1fr;
+  /* grid-area: main; */
+  display: block;
+  /* grid-template-rows: 2fr 1fr; */
   gap: 20px;
-  width: 75%;
-  padding: 0 2rem 0 0;
+  width:75%;
+  margin-right: 20px;
+  padding: 0; /* Remove padding */
 }
 
 .top-main,
 .bottom-main {
   padding: 20px;
+  margin-bottom: 20px;
   background-color: #ffffff;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 50rem;
+  /* width: 100%; Make it full width */
+  /* height: 15rem; Allow height to adjust based on content */
+}
+
+.chart {
+  width: 49rem;
   height: 20rem;
 }
 
 .right-section {
-  grid-area: right-section;
-  display: grid;
-  grid-template-rows: 1fr 1fr;
+  /* grid-area: right-section; */
+  display: block;
+  /* grid-template-rows: 1fr 1fr; */
   gap: 20px;
-  width: 23%;
+  width: 25%;
+  height: 30rem;
 }
 
 .top-right,
 .bottom-right {
-  padding: 20px;
-  background-color: #ffffff;
+  padding: 10px;
   border-radius: 5px;
+  height: 100%;
+  /* background-color: #f2f7f7; */
+  margin-bottom: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.top-right h3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 30px;
+}
+
+.right-content {
+  display: flex;
+  background-color: #ffffff;
+  padding: 10px;
+  gap: 10px;
+  border-bottom: 1px solid #c7c7c7;
+}
+
+.right-img {
+  width: 3rem;
+  height: 3rem;
+  background-color: #c7c7c7;
+}
+
+.content-right ::after {
+  
 }
 
 .filter {
@@ -381,17 +442,17 @@ h4 {
 }
 
 /* Media queries for tablet and smaller screens */
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1300px) {
   .side-menu-bar {
     width: 20vw;
     height: auto;
   }
 
-  .top-main,
+  /* .top-main,
 .bottom-main {
   width: 41.5rem;
   height: 20rem;
-}
+} */
 
   * {
     font-size: 13px;
@@ -428,7 +489,9 @@ h4 {
   }
 
   .toggle-menu-btn {
-    display: inline;
+    display: flex;
+    margin: 0;
+    padding: 20px;
   }
 
   .logout,
@@ -494,7 +557,7 @@ h4 {
 
   .top-main,
   .bottom-main {
-    width: 49rem;
+    /* width: 50rem; */
   }
 
   .search input {
@@ -503,6 +566,11 @@ h4 {
 
   .sub-header {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .card {
+    height: 14rem;
+    width: 24rem;
   }
 
   .cards {
@@ -555,7 +623,7 @@ h4 {
   }
 
   .side-menu-bar.visible {
-    width: 10vw;
+    width: 13vw;
   }
 
   .dashboard.visible {
@@ -583,8 +651,8 @@ h4 {
   }
 
   .main-body {
-    margin-left: 10vw;
-    width: 84%;
+    margin-left: 12vw;
+    width: 85%;
   }
  
   .header {
@@ -611,12 +679,14 @@ h4 {
   .right-section {
     width: 100%;
     margin-top: 20px;
+    display: block;
   }
 
   .top-right,
   .bottom-right {
     height: 25rem;
     transition: 3s left;
+    margin-bottom: 20px;
   }
 
   .create {
@@ -632,11 +702,12 @@ h4 {
   }
 
   .card {
-    height: 5.5rem;
+    height: 14rem;
   }
 
   .cards {
     height: 5.5rem;
+    width: 25rem;
   }
 
   .body-main {
@@ -650,7 +721,7 @@ h4 {
 
   .top-main,
   .bottom-main {
-    width: 21rem;
+    width: 24rem;
   }
 
   #btn {
