--- a/client/src/Component/BookAppointment/Book.css
+++ b/client/src/Component/BookAppointment/Book.css
@@ -46,7 +46,7 @@ form{
     top: 0;
     left: 0;
     width: 100%;
-    color: #d3d3d3;
+    color: #276AB3;
     transition: 0.2s all;
     cursor: text;
   }
@@ -99,21 +99,72 @@ img{width: 30vw;
   margin-top: 30px;
 
 }
-button{
-  background-color: #276AB3;
-  height:  2.5rem;
-  width: 10rem;
-  text-align: center;
-  line-height: 40px;
-  color: #d3d3d3;
-  font-size: 25px;
-  font-family: Arial, Helvetica, sans-serif;
-  border-radius: 20px;
-  border-style: none; 
-  margin-left: 12rem;
-  align-self: center;
+.formbtn{
+  background-color: #276ab3;
+  color: white;
+  padding: 10px 28px;
+  border-radius: 10px;
+  margin-left: 14rem;
+  border: 2px solid white;
+  cursor: pointer;
 }
 button:hover{
-  box-shadow: 0 0 5px #276AB3,
-  0 0 25px #276AB3, 0 0 50px, 0 0 100px, 0 0 200px;
+  background-color: rgb(90, 118, 255);
+  color: white;
+  transition: all 0.4s ease-in;
+}
+
+@media (max-width: 390px) {
+  .general{
+    display: block;
+    margin-top: 61px;
+    margin-bottom: -130px;
+  }
+  .input-field{
+    width: 23rem;
+    margin-block: 22px;
+  }
+  .body{
+    margin-left: 59px;
+    margin-top: 148px;
+  }
+
+  img {
+    width: 100vw;
+    height: 40vh;
+    margin-bottom: -120px;
+  }
+  .formbtn{
+    width: 10rem;
+    margin-left: 7rem;
+  }
+ 
+}
+
+@media (max-width: 414px) {
+  .general{
+    display: block;
+    margin-top: 61px;
+    margin-bottom: -250px;
+  }
+  .head{
+    margin-top: -250px;
+  }
+  .input-field{
+    width: 23rem;
+    margin-block: 22px;
+  }
+  .body{
+    margin-left: 59px;
+  }
+
+  img {
+    width: 100vw;
+    height: 40vh;
+    /* margin-bottom: -120px; */
+  }
+  .formbtn{
+    width: 10rem;
+    margin-left: 7rem;
+  }
 }
