--- a/client/src/Component/Important/Nav/Nav.css
+++ b/client/src/Component/Important/Nav/Nav.css
@@ -21,6 +21,7 @@ nav{
     background-color: white;
     position: sticky;
     top: 0;
+  
 }
 
 nav .title{
@@ -242,9 +243,9 @@ small{
     }
 }
 
-@media (max-width:1250px) {
+/* @media (max-width:1250px) {
     div{
         font-size: 16px;
     }
-}
+} */
 
