--- a/client/src/Component/Admin/PatientDB/PatientDB.css
+++ b/client/src/Component/Admin/PatientDB/PatientDB.css
@@ -2,11 +2,12 @@
     display: flex;
     width: 100%;
     gap: 8%;
-    padding: 50px;
+    padding: 40px 0;
 }
 
 .patient-menu {
     width: 30%;
+    height: 45rem;
     background-color: #fff;
     display: flex;
     justify-content: center;
@@ -105,9 +106,6 @@
     width: 17rem;
 }
 
-.patient-content__amt {
-    
-}
 .patient-content__ico {
     display: flex;
     gap: 10px;
@@ -158,21 +156,20 @@
   
   .medical-form {
     padding: 20px;
-    /* max-width: 400px; */
-    /* margin: 20px auto; */
   }
   
-  .form-group {
-    /* margin-bottom: 20px; */
-  }
-  
-  label {
+  .formm label {
+    position: relative;
     display: block;
     margin-bottom: 5px;
     /* font-size: 14px; */
     font-weight: bold;
     color: #000;
     font-size: 14px;
+  }
+
+  .formm input {
+    border: 1px solid #4e5052;
   }
   
   .input-field {
@@ -181,12 +178,16 @@
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 5px;
-    outline: none;
   }
   
-  textarea {
-    resize: vertical;
+  .checkbox {
+    display: flex;
+    padding: 0;
   }
+
+  /* textarea {
+    /* resize: vertical; */
+  /* } */ */
   
   .save-btn {
     background-color: #276AB3;
@@ -200,5 +201,74 @@
   
   .save-btn:hover {
     background-color: #1E528E;
+  }
+  
+  .history {
+    display: flex;
+    margin-left: 40px;
+    gap: 20px;
+    align-items: center;
+  }
+
+  .back {
+    width: 40px;
+    height: 40px;
+    border: 1.5px dashed #4e5052;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+  }
+
+  .page-name {
+    font-size: 14pt;
+    font-weight: 700;
+
+  }
+
+  .patient-menuu {
+    width: 30%;
+    height: 23rem;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    box-shadow: 0px  5px 20px rgba(0, 0, 0, 0.3);
+  }
+
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin-left: 10%;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .add-appointment-modal {
+    background: white;
+    width: 60vw;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .close-button {
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
   }
   
