--- a/client/src/Component/About/About.css
+++ b/client/src/Component/About/About.css
@@ -1,10 +1,13 @@
 .about-page{
-    height: 50svh;
+    height: 55svh;
     background-color: #276ab3;
     display: grid;
     align-content: center;
     justify-items: center;
     padding: 0px 15%;
+    background-image: url(doctor2.jpg);
+    background-position: center;
+    background-size: cover;
 }
 
 .about-h2{
@@ -16,6 +19,7 @@
     text-align: center;
     color: white;
     font-size: 14px;
+    letter-spacing: 1px;
 }
 
 .white{
@@ -43,6 +47,7 @@
 .his-p{
     color: black;
     font-size: 14px;
+    letter-spacing: 1px;
 }
 
 .staff{
@@ -50,7 +55,6 @@
 }
 
 .pic{
-    max-width: 300px;
     height: 35vh;  
     background-color: #dddddd;
     border-radius: 5px;
@@ -105,6 +109,7 @@
 .Meet-li {
     padding: 10px 0;
     font-size: 14px;
+    letter-spacing: .5px;
 }
 
 .load-btn{
