--- a/client/src/Component/Important/Nav/Nav.css
+++ b/client/src/Component/Important/Nav/Nav.css
@@ -3,7 +3,7 @@
     padding: 0;
     list-style-type: none;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Bai Jamjuree", sans-serif;
 }
 
 body{
@@ -15,7 +15,7 @@ body{
 }
 
 .active{
-    background-color: white;
+    color: orange;
 }
 
 nav{
@@ -57,7 +57,7 @@ nav ul li a{
 
 nav ul li a:hover{
     animation: underline 1.8s ease-out;
-    color: rgb(255, 214, 137);
+    color: orange;
     transition: all 0.4s ease;
 }
 
@@ -84,13 +84,13 @@ nav .menu span{
     border-radius: 0.2rem;
 }
 
-a.active {
+a.act {
     font-size: 15px;
     font-weight: 600;
     letter-spacing: 1px;
 }
 
-a.active {
+a.act {
     background-color: #276ab3;
     color: white;
     padding: 10px 28px;
@@ -101,7 +101,7 @@ a.active {
 }
 
 
-a.active:hover{
+a.act:hover{
     background-color: rgb(90, 118, 255);
     color: white;
     transition: all 0.4s ease-in;
@@ -119,7 +119,7 @@ small{
 }
 
 @media (max-width:890px){
-    a.active{
+    a.act{
         margin-left: 10px;
         padding: 10px 19px;
     }
