--- a/client/src/Component/Admin/Health/Health.css
+++ b/client/src/Component/Admin/Health/Health.css
@@ -104,10 +104,10 @@
   .patient-list th,
   .patient-list td {
     border-bottom: 1px solid #f6f6f6;
-    padding: 13px;
+    padding: 12px 0;
     text-align: center;
-    font-size: 13px;
-    font-weight: 600;
+    font-size: 12px;
+    font-weight: 400;
     color: #3a3a3a;
   }
   
