--- a/client/src/Component/Important/Nav/Nav.css
+++ b/client/src/Component/Important/Nav/Nav.css
@@ -116,7 +116,8 @@ small{
 }
 
 .Logo{
-    width: 40px;
+    width: 50px;
+    height: 50px;
 }
 
 @media (max-width:890px){
@@ -239,12 +240,9 @@ small{
     }
 }
 
-<<<<<<< HEAD
 /* @media (max-width:1250px) {
-=======
 @media (max-width:1024px) {
 
->>>>>>> 6b520be424e83e074f6ee9ff160fbf521d4ac251
     div{
         font-size: 16px;
     }
