--- a/client/src/Component/Health blog/Healthblog.css
+++ b/client/src/Component/Health blog/Healthblog.css
@@ -38,6 +38,11 @@
     margin-top: 5px;
 }
 
+.author_p{
+    font-size: 14px;
+    
+}
+
 .content{
     font-size: 14px;
     font-family: sans-serif;
@@ -52,6 +57,7 @@
     max-width: 100%;
     max-height: 25px;
     margin: 10px 0;
+    font-size: 16px;
 }
 
 
