--- a/client/src/Component/Important/Nav/Nav.css
+++ b/client/src/Component/Important/Nav/Nav.css
@@ -18,7 +18,7 @@ body{
     color: orange;
 }
 
-nav{
+.nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,7 +27,7 @@ nav{
     top: 0;
 }
 
-nav .title{
+.nav .title{
     font-size: 1.5rem;
     /* margin: 1rem; */
     font-weight: bold;
@@ -35,17 +35,16 @@ nav .title{
     padding-left: 50px;
 }
 
-nav ul{
+.nav ul{
     display: flex;
 }
 
-nav ul li{
+.nav ul li{
     list-style-type:none ;
     align-self: center;
-
 }
 
-nav ul li a{
+.nav ul li a{
     display: block;
     text-decoration: none;
     color: black;
@@ -55,7 +54,7 @@ nav ul li a{
     font-weight: 600;
 }
 
-nav ul li a:hover{
+.nav ul li a:hover{
     animation: underline 1.8s ease-out;
     color: orange;
     transition: all 0.4s ease;
@@ -66,7 +65,7 @@ nav ul li a:hover{
     animation: unset;
 }
 
-nav .menu{
+.nav .menu{
     display: none;
     position: absolute;
     top: 0.50rem;
@@ -77,20 +76,20 @@ nav .menu{
     height: 1.9rem;
 }
 
-nav .menu span{
+.nav .menu span{
     height: 2px;
     width: 100%;
     background-color: black;
     border-radius: 0.2rem;
 }
 
-a.act {
+.nav ul li a.act {
     font-size: 15px;
     font-weight: 600;
     letter-spacing: 1px;
 }
 
-a.act {
+.nav ul li a.act {
     background-color: #276ab3;
     color: white;
     padding: 10px 28px;
@@ -101,7 +100,7 @@ a.act {
 }
 
 
-a.act:hover{
+.nav ul li a.act:hover{
     background-color: rgb(90, 118, 255);
     color: white;
     transition: all 0.4s ease-in;
@@ -119,19 +118,19 @@ small{
 }
 
 @media (max-width:890px){
-    a.act{
+    .nav ul li a.act{
         margin-left: 10px;
         padding: 10px 19px;
     }
 
-    nav .title{
+    .nav .title{
         padding-left: 0;
         margin-left: 0.8rem;
     }    
 }
 
 @media (max-width:890px){
-    nav ul li a{
+    .nav ul li a{
         padding: 0.1rem;
         margin: 0 0.3rem;
         font-size: 13.5px;
@@ -141,67 +140,62 @@ small{
 }
 
 @media (max-width:701px){
-    nav ul{
+    .nav ul{
       display: none;
     }
 
 }
 
 @media (max-width:700px) {
-    nav .menu{
+    .nav .menu{
         display: flex;
         font-size: 1rem;
         transition: all 0.4s ease-in-out;
     }
 
-    nav{
+    .nav{
         flex-direction: column;
         align-items: start;
         height: 55px;
         z-index: 200;
     }
 
-    nav ul{
+    .nav ul{
         flex-direction: column;
         width: 100%;
         margin-bottom: 0.25rem;
     }
 
-    nav ul li{
+    .nav ul li{
         align-self: START;
         padding-left: 10px;
     }
 
-    nav ul li a {
+    .nav ul li a {
         margin: 0.55rem 0.5rem;
     }
-    nav ul.Open{
+    .nav ul.Open{
         animation: wait .5s ease-in;
         display: flex;
         text-align-last: justify;
     }
 
-    nav ul.Open li a{
+    .nav ul.Open li a{
         font-size: 14px;
         font-weight: 700;
         letter-spacing: 1px;
     }
 
-    nav ul:active{
+    .nav ul:active{
         transition: all 0.2s ease-in-out;
     }
 
-    nav .title{
+    .nav .title{
         padding-left: 20px;
     }
 
 }
 
-@media (max-width:991px){
-    nav ul li a {
-        font-size: 13px;
-    }
-}
 
 @keyframes underline {
     0%{
