--- a/client/src/Component/Admin/Dashboard/Dashboard.css
+++ b/client/src/Component/Admin/Dashboard/Dashboard.css
@@ -385,10 +385,10 @@
       width: 100%;
     }
   
-    .top-main,
+    /* .top-main,
     .bottom-main {
       /* width: 24rem; */
-    }
+    /* } */ */
   
     #btn {
       width: 75%;
