--- a/client/src/Component/Admin/Health/Health.css
+++ b/client/src/Component/Admin/Health/Health.css
@@ -190,6 +190,19 @@
     bottom: 10px;
     animation: bounce 2s infinite;
   }
+
+  .page-title {
+    background-color: #fff;
+    width: fit-content;
+    padding: 15px;
+    margin: 20px 0;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .page-title h2 {
+    color: #3a3a3a;
+  }
   
   @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
