--- a/client/src/Component/PatientPortal/PatientPortal.css
+++ b/client/src/Component/PatientPortal/PatientPortal.css
@@ -15,13 +15,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: stretch;
     background-color: #276ab3;
     border-left: 10px solid #276ab3;
     transition: 0.5s;
     overflow: hidden;
 }
 
-.portal_navigation.active {
+.portal_navigation.pactive {
     width: 80px;
 }
 
@@ -40,6 +41,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.portal_navigation ul {
+    display: block;
 }
 
 .portal_navigation ul li {
@@ -64,7 +69,11 @@
     display: flex;
     align-items: center;
     color: #f5f5f5;
+    padding: 0;
+    margin: 0;
+    font-size: inherit;
     opacity: 0.6;
+    font-weight: 100;
 }
 
 .portal_navigation ul li a.active_link {
@@ -75,6 +84,7 @@
     align-items: center;
     color: #f5f5f5;
     opacity: 1;
+    font-weight: 500;
 }
 
 .portal_navigation ul li a.active_link {
@@ -106,6 +116,30 @@
     border-radius: 50%;
     box-shadow: 35px -35px 0 10px #f5f5f5;
     pointer-events: none;
+}
+
+.portal_navigation ul li a:hover{
+    animation: underline 1.8s ease-out;
+    transition: all 0.4s ease;
+    color: #f5f5f5;
+}
+
+.portal_navigation ul li a.active_link:hover{
+    animation: none;
+    transition: none;
+    color: #276ab3;
+}
+
+@keyframes underline {
+    0%{
+        transform: translateY(5%);
+    }
+    10%{
+        transform: translateY(10%);
+    }
+    20%{
+        transform: translateY(-15%);
+    }
 }
 
 .portal_navigation ul li a .icon {
@@ -172,7 +206,7 @@
     background-color: #f5f5f5;
 }
 
-.patient_main.active {
+.patient_main.pactive {
     width: calc(100% - 80px);
     left: 80px;
 }
@@ -191,7 +225,7 @@
     box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
 }
 
-.patient_main.active .patient_topbar {
+.patient_main.pactive .patient_topbar {
     width: calc(100% - 80px);
     left: 80px;
 }
@@ -259,13 +293,80 @@
     display: flex;
 }
 
+.patient_topbar .dropdown_button-container {
+    position: relative;
+}
+  
+.patient_topbar .dropdown_button {
+    width: 100%;
+    height: 40px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.3s ease;
+}
+
+.patient_topbar .notification_circle {
+    position: absolute;
+    top: 0;
+    right: -5px;
+    background-color: orange;
+    color: white;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.patient_topbar .dropdown_button:hover svg {
+    color: #276ab3;
+}
+  
+.patient_topbar .dropdown {
+    position: absolute;
+    top: calc(100% + 5px);
+    right: 0;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    min-width: 150px;
+    display: none;
+}
+
+.patient_topbar .dropdown.show {
+    display: block;
+}
+  
+.patient_topbar .dropdown-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.patient_topbar .dropdown-item svg {
+    margin-right: 1rem;
+}
+  
+.patient_topbar .dropdown-item:hover {
+    background-color: #276ab3;
+    color: #f5f5f5;
+}
+
 .patient_topbar .user_details .img_box {
     position: relative;
     width: 40px;
     height: 40px;
     border-radius: 50%;
     overflow: hidden;
-    cursor: pointer;
+    pointer-events: none;
 }
 
 .patient_topbar .user_details img {
