--- a/client/src/Component/BookAppointment/Book.css
+++ b/client/src/Component/BookAppointment/Book.css
@@ -1,4 +1,4 @@
-.general{
+/* .general{
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -25,12 +25,6 @@ h2{
 
 form{
     display: block;
-    
-    /* flex-wrap: wrap;
-    flex-direction: column; */
-    
-    
-   
 }
 
 .input-field {
@@ -162,9 +156,9 @@ button:hover{
     width: 100vw;
     height: 40vh;
     /* margin-bottom: -120px; */
-  }
-  .formbtn{
+  /* } */
+  /* .formbtn{
     width: 10rem;
     margin-left: 7rem;
-  }
-}
+  } */
+/* } */ 
