monthly patients is counted in patientDatabase

--- a/client/src/Component/Admin/PatientDB/PatientDB.css
+++ b/client/src/Component/Admin/PatientDB/PatientDB.css
@@ -285,8 +285,9 @@
  .patient-icon{
   position: absolute;
   top: 165px;
-  color: #1E528E;
+  color: #105eb74a;
   font-size: 50px;
+  
  }
  .patient-icon-span{
   position: absolute;
